--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="Styles/style.css">
+    <title>HomeWork_11</title>
 </head>
 <body>
+    <div class="container">
+        <div class="fibonacci"></div>
+        <button id="start">Нажми на кнопку</button>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
